# snapdropx

./: .gitignore  README.md  demo.py  pyproject.toml  run.py
src/snapdropx/: __init__.py  main.py  security.py  server.py
src/snapdropx/static/: style.css
src/snapdropx/templates/: index.html
tests/: test_snapdropx.py
