[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapdropx"
version = "1.0.0"
description = "SnapDropX is a secure, zero-config local file drop server with upload support and optional authentication"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Rayan" }
]

keywords = [
    "snapdropx",
    "file-server",
    "file-upload",
    "local-transfer",
    "fastapi",
    "cli",
    "secure"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "typer>=0.9.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[project.scripts]
snapdropx = "snapdropx.main:app"

[project.urls]
Homepage = "https://github.com/vertexcrew/snapdropx"
Documentation = "https://github.com/vertexcrew/snapdropx#readme"
Repository = "https://github.com/vertexcrew/snapdropx"

[tool.setuptools.packages.find]
where = ["src"]
include = ["snapdropx*"]

[tool.setuptools.package-data]
snapdropx = [
    "templates/*.html",
    "static/*.css",
    "static/*.svg"
]
